--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "redbastie/skele",
+    "name": "vrubba/skele2",
     "homepage": "https://github.com/redbastie/skele",
     "description": "Rapid Laravel Livewire + TailwindCSS app development package.",
     "license": "MIT",
