--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "doctrine/dbal": "^3.0",
         "jamesmills/laravel-timezone": "^1.9",
         "laravel/framework": "^8.0",
-        "lukeraymonddowning/honey": "^0.3"
+        "lukeraymonddowning/honey": "^0.3",
+        "livewire/livewire": "^2.3"
     },
     "autoload": {
         "psr-4": {
